# paranoia_toolkit

./: .gitmodules  readme!.txt
android/: AndroidManifest.xml  build  build.xml  gen-version.sh  project.properties
android/jni/: Application.mk  bs_config.mk  cl_dll  dlls
android/res/layout/: about.xml  activity_launcher.xml  notify.xml  notify_21.xml
android/res/values/: admob-id.xml  git-rev.xml  strings.xml
android/res/values-ru/: strings.xml
android/src/in/celest/xash3d/: CertCheck.java  LauncherActivity.java  XashActivity.java  XashConfig.java  XashService.java  XashStaticConfig.java
android/src/su/xash/: GooglePlaySupport.java  InstallReceiver.java  LauncherActivity.java
android/unused/src/in/celest/xash3d/: FPicker.java  ShortcutActivity.java
code_src/: license.txt  readme.txt
code_src/cl_dll/: Android.mk  CMakeLists.txt  CrashRpt.h  GameStudioModelRenderer.cpp  GameStudioModelRenderer.h  GameStudioModelRenderer_Sample.h  StudioModelRenderer.cpp  StudioModelRenderer.h  ammo.cpp  ammo.h  ammohistory.cpp  ammohistory.h  battery.cpp  camera.h  cdll_int.cpp  cl_dll.dsp  cl_dll.h  cl_util.h  com_weapons.h  custom_alloc.h  death.cpp  demo.cpp  demo.h  entity.cpp  ev_common.cpp  ev_hldm.cpp  ev_hldm.h  eventscripts.h  exception.cpp  exception.h  flashlight.cpp  getfont.h  gl_debug.cpp  gl_decals.cpp  gl_dlight.h  gl_light_dynamic.cpp  gl_lightmap.cpp  gl_model.cpp  gl_postprocess.cpp  gl_renderer.cpp  (+90 more)
code_src/cl_dll/hl/: hl_baseentity.cpp  hl_events.cpp  hl_weapons.cpp
code_src/common/: com_model.h  const.h  engine_launcher_api.h  ivoicetweak.h  net_api.h  nowin.h  old_com_model.h  r_studioint.h  screenfade.h
code_src/dlls/: AI_BaseNPC_Schedule.cpp  Android.mk  CMakeLists.txt  animating.cpp  animation.cpp  animation.h  apache.cpp  barney.cpp  basemonster.h  bmodels.cpp  buttons.cpp  cbase.cpp  cbase.h  client.cpp  combat.cpp  crossbow.cpp  crowbar.cpp  decals.h  defaultai.cpp  doors.cpp  effects.cpp  effects.h  explode.cpp  extdll.h  func_break.cpp  func_break.h  func_tank.cpp  game.cpp  gamerules.cpp  gamerules.h  gauss.cpp  ggrenade.cpp  h_battery.cpp  handgrenade.cpp  healthkit.cpp  hgrunt.cpp  hl.dsp  houndeye.cpp  items.cpp  items.h  (+51 more)
code_src/engine/: cdll_int.h  edict.h  eiface.h  keydefs.h  studio.h
code_src/game_shared/: bitvec.h  vgui_checkbutton2.cpp  vgui_checkbutton2.h  vgui_defaultinputsignal.h  vgui_grid.cpp  vgui_grid.h  vgui_helpers.cpp  vgui_helpers.h  vgui_listbox.cpp  vgui_listbox.h  vgui_loadtga.cpp  vgui_loadtga.h  vgui_scrollbar2.cpp  vgui_scrollbar2.h  vgui_slider2.cpp  vgui_slider2.h  voice_banmgr.h  voice_common.h  voice_gamemgr.h  voice_status.cpp  voice_status.h  voice_vgui_tweakdlg.cpp
code_src/opengl32/: OtherOGL.cpp  opengl32.cpp  opengl32.def  opengl32.dsp  opengl32.dsw  opengl32.h
code_src/pm_shared/: pm_materials.h  pm_math.c  pm_movevars.h  pm_shared.c
code_src/utils/vgui/include/: VGUI.h  VGUI_ActionSignal.h  VGUI_App.h  VGUI_Bitmap.h  VGUI_BitmapTGA.h  VGUI_Border.h  VGUI_BorderLayout.h  VGUI_BorderPair.h  VGUI_BuildGroup.h  VGUI_Button.h  VGUI_ButtonGroup.h  VGUI_ChangeSignal.h  VGUI_CheckButton.h  VGUI_Color.h  VGUI_ComboKey.h  VGUI_ConfigWizard.h  VGUI_Cursor.h  VGUI_Dar.h  VGUI_DataInputStream.h  VGUI_Desktop.h  VGUI_DesktopIcon.h  VGUI_EditPanel.h  VGUI_EtchedBorder.h  VGUI_FileInputStream.h  VGUI_FlowLayout.h  VGUI_FocusChangeSignal.h  VGUI_FocusNavGroup.h  VGUI_Font.h  VGUI_Frame.h  VGUI_FrameSignal.h  VGUI_GridLayout.h  VGUI_HeaderPanel.h  VGUI_Image.h  VGUI_ImagePanel.h  VGUI_InputSignal.h  VGUI_InputStream.h  VGUI_IntChangeSignal.h  VGUI_KeyCode.h  VGUI_Label.h  VGUI_Layout.h  (+34 more)
code_src/zhlt_bump/: Readme.txt  make.ctl  make.dep  make.gnu  make.os  make.rul  make.w32  makedep.pl  makefile  makefile.in  makerul.gnu  makerul.w32  makezhlt.cmd  zhlt.dsw
code_src/zhlt_bump/common/: blockmem.cpp  blockmem.h  boundingbox.h  bspfile.cpp  bspfile.h  cmdlib.cpp  cmdlib.h  filelib.cpp  filelib.h  hlassert.h  log.cpp  log.h  mathlib.h  mathtypes.h  messages.cpp  messages.h  resourcelock.h  scriplib.cpp  threads.cpp  threads.h  win32fix.h  winding.cpp  winding.h
code_src/zhlt_bump/hlbsp/: bsp5.h  hlbsp.dep  hlbsp.dsp  hlbsp.mak  make.inc  merge.cpp  outside.cpp  portals.cpp  qbsp.cpp  solidbsp.cpp  surfaces.cpp  tjunc.cpp  writebsp.cpp
code_src/zhlt_bump/hlcsg/: autowad.cpp  brush.cpp  brushunion.cpp  csg.h  hlcsg.dep  hlcsg.dsp  hlcsg.mak  hullfile.cpp  make.inc  map.cpp  qcsg.cpp  textures.cpp  wadcfg.cpp  wadinclude.cpp  wadpath.cpp  wadpath.h
code_src/zhlt_bump/hlrad/: hlrad.dep  hlrad.dsp  hlrad.mak  lerp.cpp  lightmap.cpp  make.inc  mathutil.cpp  nomatrix.cpp  qrad.cpp  qrad.h  qradutil.cpp  sparse.cpp  trace.cpp  transfers.cpp  vismatrix.cpp  vismatrixutil.cpp
code_src/zhlt_bump/hlvis/: flow.cpp  hlvis.dep  hlvis.dsp  hlvis.mak  make.inc  vis.cpp  vis.h
code_src/zhlt_bump/netvis/: NetvisSession.cpp  NetvisSession.h  SocketThreads.cpp  ZHLTThread.h  c2cpp.h  make.inc  netvis.dsp  netvis.h  packet.cpp  packet.h
code_src/zhlt_bump/ripent/: make.inc  ripent.cpp  ripent.dsp  ripent.h
example_levels/: prefabs_vehicles.rmf  test_3dsky.bsp  test_3dsky.rmf  test_dyn.bsp  test_dyn.rmf  test_follow.bsp  test_follow.rmf  test_goal.bsp  test_goal.rmf  test_grass.bsp  test_grass.rmf  test_mgun.bsp  test_mgun.rmf  test_mp3.bsp  test_mp3.rmf  test_rain.bsp  test_rain.rmf  test_rush.bsp  test_rush.rmf  test_texts.bsp  test_texts.rmf
font_converter/: letters.txt
mapping/: compiler(PARANOIA).bat  lights.rad  paranoia.fgd
